[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = "0.8.8"
rstest = "0.26.1"
tokio =  { version = "1.49.0", features = ["full"] }
mockall = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
async-trait = "0.1"
password-hash = "0.5.0"
argon2 = "0.5.3"

[dev-dependencies]
mockall = "0.13"
